# esppdp

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.old
case/: README.md  vt100.scad
case/source-images/: digital_badge.xcf  digital_vt100-7349.xcf  digital_vt100-back-7363.xcf  digital_vt100-side-7362.xcf
components/hid_server/: hci_server.cpp  hci_server.h  hci_transport_esp32.cpp  hid_server.cpp  hid_server.h
components/ie15term/: CMakeLists.txt  ie15lcd.c
firmware/: README.md  partitions.csv  sdkconfig
firmware/main/: CMakeLists.txt  Kconfig.projbuild  bthid.c  main.c  pdp11_ddcmp.h  pdp11_defs.h  pdp11_io.c  pdp11_io_lib.c  pdp11_io_lib.h  pdp11_rh.c  pdp11_rom.c  pdp11_rq.c  pdp11_rx.c  pdp11_sys.c  pdp11_xq.c  pdp11_xq_bootrom.h  scp.c  scp_help.h  sim_card.c  sim_card.h  sim_defs.h  sim_disk.h  sim_ether.c  sim_ether.h  sim_evtq.c  sim_frontpanel.h  sim_rev.h  sim_sock.c  sim_term.c  sim_timer.c  sim_timer.h  wifi_if_esp32.c  wifi_if_esp32_packet_filter.c  wifi_if_tap.c  wifid.c  wifid.h  (+1 more)
gcc-pdp11/: include.tar  lib.tar  notes.txt
hard-disk-image/: notes.txt
main/: CMakeLists.txt  bthid.c  bthid.h  main.c  pdp11_ch.c  pdp11_cis.c  pdp11_cpu.c  pdp11_cpumod.c  pdp11_cr.c  pdp11_cr_dat.h  pdp11_daz.c  pdp11_dc.c  pdp11_dl.c  pdp11_dmc.c  pdp11_dup.c  pdp11_dup.h  pdp11_dz.c  pdp11_fp.c  pdp11_hk.c  pdp11_io.c  pdp11_io_lib.c  pdp11_ke.c  pdp11_kg.c  pdp11_kmc.c  pdp11_lp.c  pdp11_mscp.h  pdp11_pclk.c  pdp11_pt.c  pdp11_rc.c  pdp11_rf.c  pdp11_rh.c  pdp11_rk.c  pdp11_rl.c  pdp11_rp.c  pdp11_rq.c  pdp11_rs.c  pdp11_rx.c  pdp11_ry.c  pdp11_stddev.c  pdp11_sys.c  (+49 more)
main/hostbuild/: .gitignore  Makefile
pcb/: .gitignore  esppdp-cache.lib  esppdp.kicad_pcb  esppdp.pro  esppdp.sch  fp-info-cache
spiffs/: floppy.dsk
wifid/: .gitignore  Makefile  link.ld  wifid.c  wifid_iface.h
(+4 files in other folders)
